# home_finder

./: .dockerignore  .env  .env.example  .eslintrc.json  .gitignore  .railwayignore  .vercelignore  Dockerfile  Dockerfile.worker  LICENSE  Makefile  Procfile  PropertyListings.xlsx  RAILWAY_LOGS.TXT  README.md  babel.config.js  build_files.sh  celery_watchdog.py  conftest.py  db.sqlite3  jest.config.js  manage.py  nixpacks.toml  package-lock.json  package.json  properties-section  pyproject.toml  pytest.ini  railway.toml  requirements.txt  start-worker.sh  start.sh  tailwind.config.js  vercel.json  webpack.config.js
.github/workflows/: ci.yml  e2e.yml  refresh-data.yml
apps/KeywordSelection/: admin.py  apps.py  models.py  urls.py  views.py
apps/KeywordSelection/data/: initial_data.json
apps/KeywordSelection/fixtures/: pinellas_county_data.json
apps/KeywordSelection/management/commands/: load_initial_data.py  load_pinellas_data.py
apps/KeywordSelection/migrations/: 0001_initial.py
apps/KeywordSelection/tests/: test_models.py  test_views.py
apps/Pages/: apps.py  urls.py  views.py
apps/Pages/tests/: test_views.py
apps/WebScraper/: admin.py  apps.py  models.py  urls.py  views.py
apps/WebScraper/fixtures/: sample_pcpao_data.csv
apps/WebScraper/management/commands/: backfill_images.py  import_pcpao_data.py
apps/WebScraper/migrations/: 0001_initial.py  0002_add_image_url.py  0003_add_database_indexes.py  0004_alter_propertylisting_address_and_more.py
apps/WebScraper/services/: __init__.py  exports.py  filtering.py  market_insights.py  pcpao_importer.py  street_view.py  task_management.py
apps/WebScraper/tasks/: __init__.py  email_results.py  import_data.py  listings_pdf.py  pcpao_scraper.py  request_manager.py  scrape_data.py  sort_data.py  tax_collector_scraper.py  user_agents.py  visual_data.py
apps/WebScraper/templatetags/: property_filters.py
apps/WebScraper/tests/: conftest.py  factories.py  test_admin.py  test_data_import.py  test_e2e_scrapers.py  test_integration.py  test_market_insights.py  test_models.py  test_performance.py  test_scrapers.py  test_services.py  test_tasks.py  test_views.py
apps/WebScraper/tests/fixtures/: pcpao_empty_results.html  pcpao_property_details.html  pcpao_search_results.html  tax_collector_delinquent.html  tax_collector_no_results.html  tax_collector_results.html
apps/analytics/: apps.py  urls.py  views.py
apps/analytics/migrations/: 0003_add_database_indexes.py  0004_alter_propertylisting_address_and_more.py  0005_scrub_street_view_urls.py  0006_keep_only_pcpao_photos.py
apps/analytics/services/: exports.py  market_insights.py  palette.py  pcpao_importer.py  property_photos.py  property_types.py  street_view.py  task_management.py
apps/analytics/tasks/: __init__.py  pcpao_scraper.py  scrape_data.py
apps/analytics/templatetags/: property_filters.py
apps/analytics/tests/: conftest.py  factories.py  test_admin.py  test_exports.py  test_filtering.py  test_integration.py  test_market_insights.py  test_models.py  test_property_photos.py  test_scrapers.py  test_services.py  test_street_view.py  test_task_management.py  test_views.py
docs/: GMAIL_APP_PASSWORD.md  SESSION_NOTES.md
docs/plans/: 2026-01-07-app-improvements-design.md  2026-01-07-critical-bugs-design.md  2026-01-07-critical-bugs-implementation.md  2026-01-07-fix-broken-pieces.md  2026-01-08-architecture-alternatives.md  2026-01-08-bulk-data-migration.md  2026-01-08-parallel-tasks.md  2026-01-08-parallel-test-plan.md  2026-01-08-portfolio-polish-design.md  2026-01-08-ux-ui-redesign.md  2026-01-13-property-images-design.md  2026-01-13-property-images.md  2026-01-14-scraper-performance.md  2026-01-14-street-view-images-design.md  2026-04-02-api-based-scraper.md  2026-05-07-e2e-tests.md  2026-05-07-polish-and-portfolio.md  2026-05-07-search-architecture-pivot.md  2026-07-06-portfolio-cleanup-plan.md
home_finder/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
scripts/: bulk_import_copy.py
static/css/: style.css  tailwind.src.css
static/js/dev/: common.js  keywordSelection.js  marketInsights.js  mobile.js
templates/: base.html
templates/KeywordSelection/: keyword-selection.html
templates/Pages/: about.html  help.html  home.html
templates/WebScraper/: dashboard.html  market-insights.html  property-detail.html  scraping-progress.html  search.html  web-scraper.html
templates/analytics/: market-insights.html  property-detail.html  search.html
templates/analytics/partials/: outlier-table.html
tests/e2e/: conftest.py  pytest.ini  test_functional.py  test_smoke.py
tests/e2e/browser/: test_journeys.py
(+6 files in other folders)
