[project]
name = "pinellas-property-finder"
version = "1.0.0"
description = "Property data aggregation system for Pinellas County, Florida"
requires-python = ">=3.12,<3.13"
dependencies = [
    "Django==5.0.4",
    "djangorestframework==3.15.1",
    "celery==5.3.6",
    "redis==5.0.3",
    "pandas==2.2.1",
    "openpyxl==3.1.2",
    "reportlab==4.1.0",
    "matplotlib==3.8.3",
    "python-decouple==3.8",
    "celery-progress==0.3",
    "watchdog==3.0.0",
    "PyPDF2==3.0.1",
    "requests==2.31.0",
    "selenium==4.18.1",
    "beautifulsoup4==4.12.3",
    "webdriver-manager==4.0.1",
    "gunicorn==21.2.0",
    "whitenoise==6.6.0",
    "dj-database-url==2.1.0",
    "psycopg2-binary==2.9.9",
]

[project.scripts]
app = "home_finder.wsgi:application"

[tool.ruff]
target-version = "py312"
line-length = 120
src = ["apps", "home_finder"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "SIM108", # ternary operator (readability preference)
]

[tool.ruff.lint.isort]
known-first-party = ["apps", "home_finder"]

[tool.ruff.format]
quote-style = "single"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "home_finder.settings"
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short --strict-markers --cov=apps --cov-report=term-missing --cov-fail-under=50"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "selenium: marks tests requiring selenium/browser",
    "celery: marks tests requiring celery worker",
]
testpaths = ["apps"]
