[project]
name = "pinellas-market-lens"
version = "1.0.0"
description = "Data-science dashboard for exploring Pinellas County parcel records"
requires-python = ">=3.12,<3.13"
dependencies = [
    "Django==5.2.14",
    "djangorestframework==3.17.1",
    "pandas==2.3.3",
    "openpyxl==3.1.5",
    "reportlab==4.5.1",
    "chardet==5.2.0",
    "matplotlib==3.10.9",
    "python-decouple==3.8",
    "PyPDF2==3.0.1",
    "requests==2.34.2",
    "selenium==4.44.0",
    "beautifulsoup4==4.14.3",
    "webdriver-manager==4.1.1",
    "gunicorn==26.0.0",
    "whitenoise==6.12.0",
    "dj-database-url==3.1.2",
    "psycopg2-binary==2.9.12",
]

[project.scripts]
app = "home_finder.wsgi:application"

[tool.ruff]
target-version = "py312"
line-length = 120
src = ["apps", "home_finder"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "SIM108", # ternary operator (readability preference)
]

[tool.ruff.lint.isort]
known-first-party = ["apps", "home_finder"]

[tool.ruff.format]
quote-style = "single"

